crates/jsonschema-codegen/tests/ui/duplicate_content_encoding_entry.stderr
error: Duplicate content encoding entry: `e`
 --> tests/ui/duplicate_content_encoding_entry.rs:5:9
  |
5 |         "e" => { check = crate::c, convert = crate::d },
  |         ^^^
